# blockchainDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
adapter/: CMakeLists.txt
adapter/cmake/: test_macros.cmake  trustdble_configure.cmake
adapter/ethereum/adapter/: CMakeLists.txt  config.ini
adapter/ethereum/adapter/docs/: 00_ethereum_mainpage.md  02_ethereum_contract.md
adapter/ethereum/adapter/include/adapter_ethereum/: adapter_ethereum.h  config_ethereum.h
adapter/ethereum/adapter/src/: CMakeLists.txt  adapter_ethereum.cpp
adapter/ethereum/adapter/tests/: CMakeLists.txt  ethereum-t.cpp  test-config.ini
adapter/ethereum/contract/: createContract.sh
adapter/ethereum/contract/truffle/: CMakeLists.txt  truffle-config.js
adapter/ethereum/contract/truffle/contracts/: TableStorage.sol
adapter/ethereum/scripts/: CMakeLists.txt  deploy_KV_contract.js  install_web3.sh  package-lock.json  package.json  readme.txt
adapter/fabric/adapter/: CMakeLists.txt
adapter/fabric/adapter/docs/: 00_fabric_mainpage.md  01_fabric_adapter.md  02_fabric_contract.md
adapter/fabric/adapter/include/adapter_fabric/: adapter_fabric.h  client_fabric.h  config_fabric.h
adapter/fabric/adapter/src/: CMakeLists.txt  adapter_fabric.cpp  client_fabric.cpp
adapter/fabric/adapter/tests/: CMakeLists.txt  fabric-t.cpp  test-config.ini
adapter/fabric/contract/: .project  build.gradle  settings.gradle
adapter/fabric/contract/src/main/java/de/trusdble/fabric/contract/: TrustDBleContract.java
adapter/fabric/contract/src/main/resources/: log4j2.xml
adapter/fabric/scripts/: build_shared_go.sh  deployContract.sh  deployTDB.sh  fabricCli.sh
adapter/factory/: CMakeLists.txt
adapter/factory/include/adapter_factory/: adapter_factory.h
adapter/factory/src/: CMakeLists.txt  adapter_factory.cpp
adapter/interface/: CMakeLists.txt
adapter/interface/include/adapter_interface/: adapter_config.h  adapter_interface.h
adapter/interface/tests/: adapter_interface_test.cpp  adapter_interface_test.h
adapter/utils/: CMakeLists.txt
adapter/utils/include/: assifunc.h  assifunc_ethereum.h  assifunc_stub.h  general_helpers.h
adapter/utils/include/adapter_utils/: encoding_helpers.h  shell_helpers.h
adapter/utils/src/: CMakeLists.txt  assifunc.cpp  assifunc_ethereum.cpp  assifunc_stub.cpp  encoding_helpers.cpp  shell_helpers.cpp
engine/include/: crypt_service.h  ha_blockchain.h  table_service.h  transaction.h
engine/src/: crypt_service.cc  ha_blockchain.cc  table_service.cc  transaction.cc
tests/: CMakeLists.txt  bc_adapter_test.cc  bc_adapter_test.h  crypt_service-t.cc
